airflow/logs/dag_id=s3_to_postgres_dag/run_id=manual__2024-07-24T05:31:30.712736+00:00/task_id=transfer_csv_to_db/attempt=1.log
[2024-07-24T05:31:31.432+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-24T05:31:31.466+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:31:30.712736+00:00 [queued]>
[2024-07-24T05:31:31.487+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:31:30.712736+00:00 [queued]>
[2024-07-24T05:31:31.487+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-07-24T05:31:31.506+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): transfer_csv_to_db> on 2024-07-24 05:31:30.712736+00:00
[2024-07-24T05:31:31.510+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62: DeprecationWarning: This process (pid=587) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-24T05:31:31.511+0000] {standard_task_runner.py:64} INFO - Started process 588 to run task
[2024-07-24T05:31:31.512+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 's3_to_postgres_dag', 'transfer_csv_to_db', 'manual__2024-07-24T05:31:30.712736+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/accommodations.py', '--cfg-path', '/tmp/tmpr6rq2s1u']
[2024-07-24T05:31:31.513+0000] {standard_task_runner.py:91} INFO - Job 18: Subtask transfer_csv_to_db
[2024-07-24T05:31:31.570+0000] {task_command.py:426} INFO - Running <TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:31:30.712736+00:00 [running]> on host 7f96a5b4d944
[2024-07-24T05:31:31.684+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='s3_to_postgres_dag' AIRFLOW_CTX_TASK_ID='transfer_csv_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-07-24T05:31:30.712736+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-24T05:31:30.712736+00:00'
[2024-07-24T05:31:31.685+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-24T05:31:31.701+0000] {base.py:84} INFO - Using connection ID 'aws_default' for task execution.
[2024-07-24T05:31:31.701+0000] {connection_wrapper.py:388} INFO - AWS Connection (conn_id='aws_default', conn_type='aws') credentials retrieved from login and password.
[2024-07-24T05:31:32.004+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-24T05:31:32.005+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/accommodations.py", line 37, in save_file_to_db
    cur.execute(sql, row)
psycopg2.errors.SyntaxError: syntax error at or near "end"
LINE 1: ...tendance, entities, duration, start, start_local, end, end_l...
                                                             ^

[2024-07-24T05:31:32.023+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=s3_to_postgres_dag, task_id=transfer_csv_to_db, run_id=manual__2024-07-24T05:31:30.712736+00:00, execution_date=20240724T053130, start_date=20240724T053131, end_date=20240724T053132
[2024-07-24T05:31:32.042+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 18 for task transfer_csv_to_db (syntax error at or near "end"
LINE 1: ...tendance, entities, duration, start, start_local, end, end_l...
                                                             ^
; 588)
[2024-07-24T05:31:32.085+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-07-24T05:31:32.114+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-24T05:31:32.116+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
